--- a/index.html
+++ b/index.html
@@ -13,10 +13,25 @@
     <canvas class = "render2d" height = "500" width = "800"></canvas>
 
     <div class = "target_area"></div>
+
+
     
     <!-- <script src="./main.js"></script> -->
 
     <!-- le type module est important pour que les import dans index soit pris en compte (avant il fallait des lignes appart) -->
+
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+<script type="importmap">
+
+  {
+    "imports": {
+      "three": "https://unpkg.com/three@0.152.2/build/three.module.js",
+      "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+    }
+  }
+</script>
+    
     <script type = "module" src = "./index.js"></script>
 </body>
 </html>
