--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   {
     "imports": {
       "three": "https://unpkg.com/three@0.152.2/build/three.module.js",
-      "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+      "three/addons/": "https://unpkg.com/three@0.152.2/examples/jsm/"
     }
   }
 </script>
